--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 # These individuals contributed to the hbnb project in this repository 
 
+Kumi Konda <k.konda@alustudent.com>
+Blandine Iradukunda <b.iradukund3@alustudent.com>
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
